--- a/app.css
+++ b/app.css
@@ -23,7 +23,7 @@ button {
 }
 
 body {
-  margin: 0;
+  margin-left: 100px;
   padding: 0;
   width: 95%;
   height: 100vh;
@@ -224,6 +224,7 @@ main .functions .opportunities .option span {
 section {
   background-color: #fcfcfc;
   position: relative;
+  margin-left: 270px;
 }
 section .head {
   display: flex;
@@ -333,15 +334,15 @@ section .section-2 h4 span {
   font-family: "Rubik-bold", "Arial", sans-serif;
   font-weight: 700;
 }
-section .section-2 .card-servis {
-  margin-left: 205px;
+section .section-2 .service {
+  margin-left: 180px;
 }
-section .section-2 .card-servis img {
+section .section-2 .service img {
   width: 1060px;
   height: 537.77px;
   margin: 155.81px 0 0 189.14px;
 }
-section .section-2 .card-servis .img-two {
+section .section-2 .service .sponsers {
   width: 1135.64px;
   height: 208.32px;
   margin: 6.45px 0 50px 144.14px;
@@ -395,9 +396,8 @@ section .position .sect2 button {
 footer {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 180px 150px 100px 150px;
+  gap: 60px;
+  padding: 180px 0 100px 300px;
   background: #F8F8F8;
 }
 footer .poster1 {
@@ -450,15 +450,32 @@ footer .poster2 {
 }
 footer .poster2 h1 {
   font-size: 16px;
-  width: 71px;
-  height: 30px;
+  width: 150px;
+  height: 20px;
 }
 footer .poster2 h4 {
   font-weight: 300;
   font-size: 14px;
   color: #4F5665;
-  width: 74px;
-  height: 30px;
+  width: 150px;
+  height: 5px;
+}
+footer .poster3 {
+  display: flex;
+  flex-direction: column;
+  margin-right: 40px;
+}
+footer .poster3 h1 {
+  font-size: 16px;
+  width: 150px;
+  height: 20px;
+}
+footer .poster3 h4 {
+  font-weight: 300;
+  font-size: 14px;
+  color: #4F5665;
+  width: 150px;
+  height: 5px;
 }
 footer .poster3 {
   display: flex;
@@ -466,29 +483,13 @@ footer .poster3 {
 }
 footer .poster3 h1 {
   font-size: 16px;
-  width: 71px;
-  height: 30px;
+  width: 150px;
+  height: 20px;
 }
 footer .poster3 h4 {
   font-weight: 300;
   font-size: 14px;
   color: #4F5665;
-  width: 74px;
-  height: 30px;
-}
-footer .poster3 {
-  display: flex;
-  flex-direction: column;
-}
-footer .poster3 h1 {
-  font-size: 16px;
-  width: 71px;
-  height: 30px;
-}
-footer .poster3 h4 {
-  font-weight: 300;
-  font-size: 14px;
-  color: #4F5665;
-  width: 74px;
-  height: 30px;
+  width: 150px;
+  height: 5px;
 }/*# sourceMappingURL=app.css.map */
