--- a/app.scss
+++ b/app.scss
@@ -426,73 +426,24 @@ button {
                 
             }
         }
-
-            
     }
 
-
-    .position {
-        position: absolute;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 340px;
-        top: 3297px;
-        bottom: 1px;
-        left: 300px;
-        border-radius: 10px;
-        background-color: #FFFFFF;
-        width: 1140px;
-        height: 233px;
-
-        .sect1 {
-            display: flex;
-            flex-direction: column;
-
-            h1 {
-                font-size: 35px;
-                @include fonts-700;
-                color: #0B132A;
-            }
-
-            h4 {
-                color: #4F5665;
-                font-weight: 300;
-                font-size: 16px;
-
-            }
-        }
-
-        .sect2 {
-                display: flex;
-                flex-direction: column;
-
-                button {
-                    background-color: #F53838;
-                    color: #FFFFFF;
-                    align-self: flex-start;
-                    font-weight: 700;
-                    font-size: 16px;
-                    padding: 17.5px 77.5px;
-                    margin-top: 86.5px;
-                    border-radius: 10px;
-                    box-shadow: 18px 34px 52px -8px rgba(245, 56, 56, 0.40);
-                }
-        }
-    }
 }
+
 
 footer {
     display: flex;
     flex-direction: row;
     gap: 60px;
-    padding: 180px 0 100px 300px;
+    padding: 180px 0 100px 360px;
     background: #F8F8F8;
+    width: 100%;
+    
 
     .poster1 {
         display: flex;
         flex-direction: column;
+        margin-right: 200px;
 
 
         .logo {
@@ -502,6 +453,7 @@ footer {
             img {
                 width: 35px;
                 height: 36.23px;
+                margin-top: 7px;
             }
         
             h1 {
@@ -546,10 +498,11 @@ footer {
     .poster2 {
         display: flex;
         flex-direction: column;
+        
 
         h1 {
             font-size: 16px;
-            width: 150px;
+            width: 120px;
             height: 20px;
 
         }
@@ -585,7 +538,7 @@ h1 {
         }
     }
 
-    .poster3 {
+    .poster4 {
         display: flex;
         flex-direction: column;
         h1 {
